--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,7 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/dusn7235/public_html/
-    - /bin/cp index.html $DEPLOYPATH
-    - /bin/cp style.css $DEPLOYPATH
-    - /bin/cp -R app $DEPLOYPATH
-    - /bin/cp -R bootstrap $DEPLOYPATH
+    - /bin/cp -R LARAVEL9 $DEPLOYPATH
