update file yml 2

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,5 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/dusn7235/public_html/
-    - /bin/cp -R LARAVEL9 $DEPLOYPATH
+    - /bin/cp index.html $DEPLOYPATH
+    - /bin/cp style.css $DEPLOYPATH
